# nightskycam

./: .flake8  .gitignore  README.md  deploy.txt  mypy.ini  pypoetry.toml  pyproject.toml
config/: #skygazer_config.toml#  aperture.toml  asi_cam_runner.toml  commands.toml  config_update_runner.toml  ftp_runner.toml  image_process_runner.toml  location_info_runner.toml  nightskycam.toml  skygazer_config.toml  sleepypi.toml  space_keeper_runner.toml  status_runner.toml  usb_cam_runner.toml  vars.toml
example/etc/: rc.local
nightskycam/: __init__.py  command_file.py  configuration_file.py  configuration_getter.py  local_command_file.py  locks.py  logs.py  main.py  manager.py  metadata.py  running_threads.py  skythread.py  sleep.py  status.py  types.py
nightskycam/aperture/: runner.py
nightskycam/asicams/: camera.py  runner.py
nightskycam/cameras/: asizwo_camera.py  camera.py  dummy_camera.py  get_camera.py  images.py
nightskycam/commands/: runner.py
nightskycam/ftp/: runner.py
nightskycam/location_info/: runner.py
nightskycam/process/: runner.py
nightskycam/skythreads/: __init__.py  asizwo_thread.py  command_thread.py  config_thread.py  dummy_camera_thread.py  dummy_thread.py  ftp_thread.py  http_thread.py  picture_thread.py  postprocess_thread.py  status_thread.py  webdav_thread.py
nightskycam/space_keeper/: runner.py
runner/: skygazer_starter.sh
tests/: ftp_server.py  test_aperture.py  test_asi_zwo.py  test_cam_runner.py  test_commands.py  test_commands_runner.py  test_config_update_runner.py  test_configuration_file.py  test_filename.py  test_ftp.py  test_ftp_runner.py  test_location_info_runner.py  test_night.py  test_picture_thread.py  test_postprocess.py  test_process.py  test_process_runner.py  test_read_coord.py  test_repetitive_test.py  test_skythread_manager.py  test_sleepypi_runner.py  test_space_keeper_runner.py  test_status.py  test_status_runner.py  test_stretch.py  test_websocket_manager.py  test_websocket_server.py
(+21 files in other folders)
