[tool.poetry]
name = "nightskycam"
version = "1.1.30"
description = "taking pictures at night"
authors = [
	"Vincent Berenz <vberenz@tuebingen.mpg.de>",
]
packages = [
	 { include = "nightskycam" },
] 

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
nptyping = "^2.2.0"
numpy = "^1.23.1"
opencv-python = "^4.6.0"
toml = "^0.10.2"
wget = "^3.2"
bs4 = "^0.0.1"
pyftpdlib = "^1.5.6"
requests = "^2.28.1"
types-requests = "^2.28.10"
pyjson = "^1.3.0"
Jinja2 = "^3.1.2"
Pillow = "^9.2.0"
WsgiDAV = "^4.0.2"
cheroot = "^8.6.0"
tomli = "^2.0.1"
packaging = "^21.3"
typing-extensions = "^4.4.0"
validators = "^0.20.0"
ntfy-lite = "^1.0.0"

[tool.poetry.scripts]
nightskycam-deploy-tests = 'nightskycam.main:deploy_tests'
nightskycam-run = 'nightskycam.main:run'
nightskycam-ftp-test-server = "nightskycam.main:ftp_test_server"
nightskycam-http-test-server = "nightskycam.main:http_test_server"
nightskycam-display = "nightskycam.main:display"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

